# neural_network

./: CMakeLists.txt
src/main/: index.cpp
src/main/network/: matrix.cpp  network.cpp  network.hpp
src/main/node/: node.cpp  node.hpp
